manifests: move systemd-repart to shared manifest
sytemd-repart is in RHEL9 so let's start masking it and testing
it in RHCOS like we do in FCOS.

As part of this I had to move the system-configuration.yaml before
the ignition-and-ostree.yaml in the includes list because the
postprocess in the latter deletes everything in /etc/systemd/system/.

--- a/manifests/system-configuration.yaml
+++ b/manifests/system-configuration.yaml
@@ -37,3 +37,11 @@ packages:
   # Boost starving threads
   # https://github.com/coreos/fedora-coreos-tracker/issues/753
   - stalld
+
+postprocess:
+  # Mask systemd-repart. Ignition is responsible for partition setup on first
+  # boot and does not use systemd-repart currently. See also
+  # https://github.com/coreos/fedora-coreos-tracker/issues/570
+  - |
+    #!/usr/bin/env bash
+    systemctl mask systemd-repart.service
