--- a/kola-denylist.yaml
+++ b/kola-denylist.yaml
@@ -18,3 +18,14 @@
   snooze: 2023-05-23
   arches:
     - aarch64
+# This snooze won't fully work because we run our reprovision tests in
+# the pipeline in a separate step and there is an issue if all tests in
+# a kola run are denylisted: https://github.com/coreos/coreos-assembler/issues/3464
+# To workaround we've added the reprovision label to the `boot.grub2-install` test.
+- pattern: ext.config.root-reprovision.*
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1489
+  snooze: 2023-05-23
+  arches:
+    - ppc64le
+  streams:
+    - rawhide
