manifests: add passt
See: https://github.com/coreos/fedora-coreos-tracker/issues/1436

--- a/manifest-lock.x86_64.json
+++ b/manifest-lock.x86_64.json
@@ -996,6 +996,12 @@
     "pam-libs": {
       "evra": "1.5.2-16.fc38.x86_64"
     },
+    "passt": {
+      "evra": "0^20230509.g96f8d55-1.fc38.x86_64"
+    },
+    "passt-selinux": {
+      "evra": "0^20230509.g96f8d55-1.fc38.noarch"
+    },
     "passwd": {
       "evra": "0.80-14.fc38.x86_64"
     },
