--- a/manifest-lock.aarch64.json
+++ b/manifest-lock.aarch64.json
@@ -990,6 +990,12 @@
     "pam-libs": {
       "evra": "1.5.2-16.fc38.aarch64"
     },
+    "passt": {
+      "evra": "0^20230509.g96f8d55-1.fc38.aarch64"
+    },
+    "passt-selinux": {
+      "evra": "0^20230509.g96f8d55-1.fc38.noarch"
+    },
     "passwd": {
       "evra": "0.80-14.fc38.aarch64"
     },
