--- a/manifest-lock.s390x.json
+++ b/manifest-lock.s390x.json
@@ -921,6 +921,12 @@
     "pam-libs": {
       "evra": "1.5.2-16.fc38.s390x"
     },
+    "passt": {
+      "evra": "0^20230509.g96f8d55-1.fc38.s390x"
+    },
+    "passt-selinux": {
+      "evra": "0^20230509.g96f8d55-1.fc38.noarch"
+    },
     "passwd": {
       "evra": "0.80-14.fc38.s390x"
     },
