manifests: add ipcalc
See: https://github.com/coreos/fedora-coreos-tracker/issues/1460

--- a/manifest-lock.x86_64.json
+++ b/manifest-lock.x86_64.json
@@ -435,6 +435,9 @@
     "intel-gpu-firmware": {
       "evra": "20230404-149.fc38.noarch"
     },
+    "ipcalc": {
+      "evra": "1.0.2-2.fc38.x86_64"
+    },
     "iproute": {
       "evra": "6.1.0-1.fc38.x86_64"
     },
