--- a/manifest-lock.aarch64.json
+++ b/manifest-lock.aarch64.json
@@ -429,6 +429,9 @@
     "intel-gpu-firmware": {
       "evra": "20230404-149.fc38.noarch"
     },
+    "ipcalc": {
+      "evra": "1.0.2-2.fc38.aarch64"
+    },
     "iproute": {
       "evra": "6.1.0-1.fc38.aarch64"
     },
