--- a/manifest-lock.ppc64le.json
+++ b/manifest-lock.ppc64le.json
@@ -423,6 +423,9 @@
     "intel-gpu-firmware": {
       "evra": "20230404-149.fc38.noarch"
     },
+    "ipcalc": {
+      "evra": "1.0.2-2.fc38.ppc64le"
+    },
     "iproute": {
       "evra": "6.1.0-1.fc38.ppc64le"
     },
