manifests: enable OSTree autopruning for ppc64le
The ppc64le arch has been blocked [1] from being fully released because
of size limitations in /boot not being able to hold 3 copies of
kernel+initramfs because the kernel on ppc64le isn't compressed [2].
Now that OSTree Autopruning [3] has landed let's enable it on ppc64le
to unblock ourselves.

[1] https://github.com/coreos/fedora-coreos-tracker/issues/987#issuecomment-1281123396
[2] https://github.com/coreos/fedora-coreos-tracker/issues/1247#issuecomment-1355314761
[3] https://github.com/coreos/fedora-coreos-tracker/issues/1495

--- a/manifests/fedora-coreos.yaml
+++ b/manifests/fedora-coreos.yaml
@@ -23,6 +23,12 @@ conditional-include:
   - if: basearch != "s390x"
     # And remove some cruft from grub2
     include: grub2-removals.yaml
+  - if: basearch == "ppc64le"
+    # Need OSTree autopruning on ppc64le (because kernels aren't compressed)
+    # until we increase the size of /boot.
+    # https://github.com/coreos/fedora-coreos-tracker/issues/1247#issuecomment-1355314761
+    # https://github.com/coreos/fedora-coreos-tracker/issues/1495#issuecomment-1561765705
+    include: ostree-autoprune.yaml
 
 ostree-layers:
   - overlay/15fcos
