--- a/manifests/fedora-coreos-base.yaml
+++ b/manifests/fedora-coreos-base.yaml
@@ -3,7 +3,7 @@
 # core functionality.
 
 include:
-  - system-configuration.yaml
+  - system-configuration-luke.yaml
   - ignition-and-ostree.yaml
   - file-transfer.yaml
   - networking-tools.yaml
