Add google-compute-engine-guest-configs-udev package; drop 30gcp-udev-rules overlay
The udev rules and dracut module are now offered by the package.
See: https://github.com/coreos/fedora-coreos-tracker/issues/1494

Signed-off-by: Renata Ravanelli <rravanel@redhat.com>
Co-authored-by: Dusty Mabe <dusty@dustymabe.com>
(cherry picked from commit 805c66c08a17ed57a781714d13e1a84f2890f55e)

--- a/manifest-lock.s390x.json
+++ b/manifest-lock.s390x.json
@@ -369,6 +369,9 @@
     "grep": {
       "evra": "3.7-4.fc37.s390x"
     },
+    "google-compute-engine-guest-configs-udev": {
+      "evra": "20230526.00-3.fc38.noarch"
+    },
     "gzip": {
       "evra": "1.12-2.fc37.s390x"
     },
