--- a/manifest-lock.x86_64.json
+++ b/manifest-lock.x86_64.json
@@ -411,6 +411,9 @@
     "grub2-tools-minimal": {
       "evra": "1:2.06-88.fc37.x86_64"
     },
+    "google-compute-engine-guest-configs-udev": {
+      "evra": "20230526.00-3.fc38.noarch"
+    },
     "gzip": {
       "evra": "1.12-2.fc37.x86_64"
     },
