--- a/manifest-lock.overrides.yaml
+++ b/manifest-lock.overrides.yaml
@@ -8,4 +8,15 @@
 # in the `metadata.reason` key, though it's acceptable to omit a `reason`
 # for FCOS-specific packages (ignition, afterburn, etc.).
 
-packages: {}
+packages:
+  google-compute-engine-guest-configs-udev:
+    evra: 20230526.00-3.fc38.noarch
+    metadata:
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2023-67a6c1b831
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1494
+      type: fast-track
+  moby-engine:
+    evr: 20.10.23-1.fc38
+    metadata:
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1476
+      type: pin
