--- a/manifests/fedora-coreos-base.yaml
+++ b/manifests/fedora-coreos-base.yaml
@@ -21,7 +21,6 @@ ostree-layers:
   - overlay/09misc
   - overlay/20platform-chrony
   - overlay/25azure-udev-rules
-  - overlay/30gcp-udev-rules
 
 # Be minimal
 recommends: false
@@ -180,8 +179,14 @@ packages:
 #   - Include this on non-x86_64 FCOS images to allow access to the large
 #     inventory of containers only built for x86_64.
 #     https://github.com/coreos/fedora-coreos-tracker/issues/1237
+#
+# - google-compute-engine-guest-configs-udev
+#   - Add this package on x86_64 and aarch64 (the two architectures
+#     GCP supports. https://github.com/coreos/fedora-coreos-tracker/issues/1494
+#     This should be moved to a shared manifest when RHEL has this package.
 packages-x86_64:
   - irqbalance
+  - google-compute-engine-guest-configs-udev
 packages-ppc64le:
   - irqbalance
   - librtas
@@ -191,6 +196,7 @@ packages-ppc64le:
 packages-aarch64:
   - irqbalance
   - qemu-user-static-x86
+  - google-compute-engine-guest-configs-udev
 packages-s390x:
   - qemu-user-static-x86
 
