Add google-compute-engine-guest-configs-udev package; drop 30gcp-udev-rules overlay
The udev rules and dracut module are now offered by the package.
See: https://github.com/coreos/fedora-coreos-tracker/issues/1494

Signed-off-by: Renata Ravanelli <rravanel@redhat.com>
Co-authored-by: Dusty Mabe <dusty@dustymabe.com>

--- a/manifest-lock.x86_64.json
+++ b/manifest-lock.x86_64.json
@@ -420,6 +420,9 @@
     "grub2-tools-minimal": {
       "evra": "1:2.06-95.fc38.x86_64"
     },
+    "google-compute-engine-guest-configs-udev": {
+      "evra": "20230526.00-3.fc38.noarch"
+    },
     "gzip": {
       "evra": "1.12-3.fc38.x86_64"
     },
