--- a/manifest-lock.s390x.json
+++ b/manifest-lock.s390x.json
@@ -378,6 +378,9 @@
     "grep": {
       "evra": "3.8-3.fc38.s390x"
     },
+    "google-compute-engine-guest-configs-udev": {
+      "evra": "20230526.00-3.fc38.noarch"
+    },
     "gzip": {
       "evra": "1.12-3.fc38.s390x"
     },
