--- a/manifests/fedora-coreos-base.yaml
+++ b/manifests/fedora-coreos-base.yaml
@@ -160,16 +160,17 @@ packages:
   - amd-gpu-firmware intel-gpu-firmware nvidia-gpu-firmware
 
 
-# This thing is crying out to be pulled into systemd, but that hasn't happened
-# yet.  Also we may want to add to rpm-ostree something like arch negation;
-# basically right now it doesn't exist on s390x.
-# Anyways, it was requested by the Red Hat perf team for RHCOS, so we have it here.
-# https://serverfault.com/questions/513807/is-there-still-a-use-for-irqbalance-on-modern-hardware
-# https://access.redhat.com/solutions/41535
-#
-# Include the qemu-user-static-x86 package on non-x86_64 FCOS images to allow
-# access to the large inventory of containers only built for x86_64.
-# https://github.com/coreos/fedora-coreos-tracker/issues/1237
+# - irqbalance
+#   - This thing is crying out to be pulled into systemd, but that hasn't happened
+#     yet.  Also we may want to add to rpm-ostree something like arch negation;
+#     basically right now it doesn't exist on s390x.
+#     Anyways, it was requested by the Red Hat perf team for RHCOS, so we have it here.
+#     https://serverfault.com/questions/513807/is-there-still-a-use-for-irqbalance-on-modern-hardware
+#     https://access.redhat.com/solutions/41535
+# - qemu-user-static-x86
+#   - Include this on non-x86_64 FCOS images to allow access to the large
+#     inventory of containers only built for x86_64.
+#     https://github.com/coreos/fedora-coreos-tracker/issues/1237
 packages-x86_64:
   - irqbalance
 packages-ppc64le:
