initramfs: Ensure we `Requires=ostree-prepare-root.service`
Today if that unit doesn't start we can continue on
and continue on to `ignition-ostree-check-rootfs-size.service`
which will fail.

--- a/overlay.d/05core/usr/lib/dracut/modules.d/40ignition-ostree/ignition-ostree-check-rootfs-size.service
+++ b/overlay.d/05core/usr/lib/dracut/modules.d/40ignition-ostree/ignition-ostree-check-rootfs-size.service
@@ -6,6 +6,7 @@ ConditionKernelCommandLine=ostree
 ConditionPathExists=!/run/ostree-live
 After=ignition-ostree-growfs.service
 After=ostree-prepare-root.service
+Requires=ostree-prepare-root.service
 # Allow Ignition config to blank out the warning
 Before=ignition-files.service
 
