--- a/overlay.d/05core/usr/lib/dracut/modules.d/40ignition-ostree/ignition-ostree-uuid-root.service
+++ b/overlay.d/05core/usr/lib/dracut/modules.d/40ignition-ostree/ignition-ostree-uuid-root.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Ignition OSTree: Regenerate Filesystem UUID (root)
-# These conditions match ignition-ostree-mount-firstboot-sysroot.service
+# These conditions match those generated in coreos-diskful-generator
 DefaultDependencies=false
 ConditionKernelCommandLine=ostree
 ConditionPathExists=!/run/ostree-live
@@ -18,7 +18,7 @@ Before=systemd-fsck@dev-disk-by\x2dlabel-dm-mpath-root.service
 # Note we don't have a Requires: /dev/disk/by-label/root here like
 # the -subsequent service does because ignition-disks may have
 # regenerated it.
-Before=ignition-ostree-mount-firstboot-sysroot.service
+Before=sysroot.mount
 
 [Service]
 Type=oneshot
