ignition-ostree: make sure we don't mount /sysroot before transposefs
When enabling multipath the ignition-ostree-mount-firstboot-sysroot
service loses to the systemd's generator, which causes /sysroot to
be mounted before we finish transposing the fs. This change makes
sure we wait to mount the /sysroot until we are done.
This was reported via: https://issues.redhat.com/browse/OCPBUGS-16157

--- a/overlay.d/05core/usr/lib/dracut/modules.d/40ignition-ostree/ignition-ostree-transposefs-autosave-xfs.service
+++ b/overlay.d/05core/usr/lib/dracut/modules.d/40ignition-ostree/ignition-ostree-transposefs-autosave-xfs.service
@@ -5,6 +5,11 @@ After=ignition-disks.service
 # Avoid racing with UUID regeneration
 After=ignition-ostree-uuid-root.service
 After=ignition-ostree-growfs.service
+Before=initrd-root-fs.target
+# https://issues.redhat.com/browse/OCPBUGS-16157
+# On multipath systems mounting the /sysroot before
+# the ignition-ostree services causes the transpose to fai.
+Before=sysroot.mount
 Before=ignition-ostree-transposefs-restore.service
 OnFailure=emergency.target
 OnFailureJobMode=isolate
