--- a/overlay.d/05core/usr/lib/dracut/modules.d/40ignition-ostree/ignition-ostree-transposefs-restore.service
+++ b/overlay.d/05core/usr/lib/dracut/modules.d/40ignition-ostree/ignition-ostree-transposefs-restore.service
@@ -6,6 +6,11 @@ After=ignition-disks.service
 After=ignition-ostree-uuid-root.service
 After=ignition-ostree-growfs.service
 Before=ignition-ostree-mount-firstboot-sysroot.service
+# https://issues.redhat.com/browse/OCPBUGS-16157
+# On multipath systems mounting the /sysroot before
+# the ignition-ostree services causes the transpose to fai.
+Before=initrd-root-fs.target
+Before=sysroot.mount
 OnFailure=emergency.target
 OnFailureJobMode=isolate
 
