--- a/kola-denylist.yaml
+++ b/kola-denylist.yaml
@@ -35,3 +35,8 @@
   snooze: 2023-08-20
   streams:
     - rawhide
+- pattern: ext.config.toolbox
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1539
+  snooze: 2023-09-10
+  streams:
+    - rawhide
