--- a/kola-denylist.yaml
+++ b/kola-denylist.yaml
@@ -35,36 +35,54 @@
   snooze: 2023-08-28
   streams:
     - rawhide
+    - branched
+    - next-devel
 - pattern: ext.config.networking.no-persist-ip
   tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1542
   snooze: 2023-08-28
   streams:
     - rawhide
+    - branched
+    - next-devel
 - pattern: ext.config.networking.prefer-ignition-networking
   tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1542
   snooze: 2023-08-28
   streams:
     - rawhide
+    - branched
+    - next-devel
 - pattern: ext.config.networking.ifname-karg.everyboot-systemd-link-file
   tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1542
   snooze: 2023-08-28
   streams:
     - rawhide
+    - branched
+    - next-devel
 - pattern: ext.config.networking.force-persist-ip
   tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1542
   snooze: 2023-08-28
   streams:
     - rawhide
+    - branched
+    - next-devel
 - pattern: ext.config.networking.bridge-static-via-kargs
   tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1542
   snooze: 2023-08-28
   streams:
     - rawhide
+    - branched
+    - next-devel
 - pattern: ext.config.networking.ifname-karg.udev-rule-firstboot-propagation
   tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1542
   snooze: 2023-08-28
   streams:
     - rawhide
+    - branched
+    - next-devel
 - pattern: ext.config.networking.mtu-on-bond-kargs
   tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1542
   snooze: 2023-08-28
+  streams:
+    - rawhide
+    - branched
+    - next-devel
