overlay.d/05core: drop Requires on root device for coreos-rootflags.service
We need to drop this Requires for a subtle reason.

In this unit we do have ConditionPathExists=!/run/ostree-live
so we'll never run on a "live" boot, but those Conditions won't
get evaluated until all other dependencies are satisfied. On a
live boot there won't be a /dev/disk/by-label/root device because
the root filesystem is coming from the ISO or PXE so the
coreos-rootflags.service would wait forever for that device to
exist and eventually fail.

--- a/overlay.d/05core/usr/lib/dracut/modules.d/35coreos-ignition/coreos-rootflags.service
+++ b/overlay.d/05core/usr/lib/dracut/modules.d/35coreos-ignition/coreos-rootflags.service
@@ -14,8 +14,7 @@ After=ignition-disks.service
 # The script checks if the rootfs was reprovisioned so let's wait
 # until after that has completed if it was requested.
 After=ignition-ostree-transposefs-restore.service
-# Requires the root device to exist
-Requires=dev-disk-by\x2dlabel-root.device
+# Needs to run after the root device is available
 After=dev-disk-by\x2dlabel-root.device
 
 [Service]
