--- a/kola-denylist.yaml
+++ b/kola-denylist.yaml
@@ -30,6 +30,16 @@
   snooze: 2023-09-10
   streams:
     - rawhide
+- pattern: ext.config.rpm-ostree.kernel-replace
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1549
+  snooze: 2023-09-10
+  streams:
+    - rawhide
+- pattern: ext.config.extensions.package
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1549
+  snooze: 2023-09-10
+  streams:
+    - rawhide
 - pattern: ext.config.networking.nameserver
   tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1542
   snooze: 2023-08-28
