manifests: name tzdata package in packages list
The tzdata package is undergoing a change [1] to allow it
to not be required by some other packages (like glibc). We
don't want the tzdata package to drop out of Fedora CoreOS
so let's name the package here in our manifest.

[1] https://fedoraproject.org/wiki/Changes/AllowRemovalOfTzdata

Closes https://github.com/coreos/fedora-coreos-tracker/issues/1534

--- a/manifests/system-configuration.yaml
+++ b/manifests/system-configuration.yaml
@@ -39,6 +39,8 @@ packages:
   - stalld
   # Ignition aware SSH key management
   - ssh-key-dir
+  # Allow for configuring different timezones
+  - tzdata
 
 postprocess:
   # Mask systemd-repart. Ignition is responsible for partition setup on first
