kola-denylist: add iso-offline-install-fromram.* tests
These tests were added recently, but the functionality doesnt exist
in the stable stream yet so the tests are failing.
Let's denylist these tests to unblock this week's stable releases.

See: https://github.com/coreos/fedora-coreos-config/pull/2560#issuecomment-1687073302

--- a/kola-denylist.yaml
+++ b/kola-denylist.yaml
@@ -35,3 +35,9 @@
   # snooze: 2023-08-20 (disabled on promotion)
   streams:
     - rawhide
+- pattern: iso-offline-install-fromram.4k.uefi
+  tracker: https://github.com/coreos/fedora-coreos-config/pull/2560#issuecomment-1687073302
+- pattern: iso-offline-install-fromram.ppcfw
+  tracker: https://github.com/coreos/fedora-coreos-config/pull/2560#issuecomment-1687073302
+- pattern: iso-offline-install-fromram.uefi
+  tracker: https://github.com/coreos/fedora-coreos-config/pull/2560#issuecomment-1687073302
