--- a/kola-denylist.yaml
+++ b/kola-denylist.yaml
@@ -15,10 +15,17 @@
     - ppc64le
 - pattern: ext.config.kdump.crash
   tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1430
-  snooze: 2023-08-31
+  snooze: 2023-09-13
   warn: true
   arches:
     - aarch64
+  platforms:
+    - stable
+    - testing
+    - next
+    - testing-devel
+    - next-devel
+    - branched
 - pattern: ext.config.networking.nameserver
   tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1542
   snooze: 2023-09-13
