denylist: fix entry for 2nd kdump.crash denial
rawhide is a stream, not a platform.

--- a/kola-denylist.yaml
+++ b/kola-denylist.yaml
@@ -100,5 +100,5 @@
   tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1560
   snooze: 2023-09-30
   warn: true
-  platforms:
+  streams:
     - rawhide
