--- a/manifests/fedora-coreos.yaml
+++ b/manifests/fedora-coreos.yaml
@@ -51,6 +51,11 @@ conditional-include:
     # Merge with overlay.d/15fcos/usr/lib/systemd/system-preset/45-fcos.preset
     # once Fedora 39 is released to all streams
     include: enable-fwupd-refresh-timer.yaml
+  - if: releasever >= 39
+    # https://github.com/coreos/fedora-coreos-tracker/issues/1362
+    # Merge with manifests/system-configuration.yaml once Fedora 39 is released
+    # to all streams
+    include: audit.yaml
 
 ostree-layers:
   - overlay/15fcos
