manifests: Inherit from Project sagano
Fedora CoreOS predates the time of bootable containers.  As such,
it's actually pretty large (relatively speaking).  Project Sagano
is a fresh take on more minimal base images.

At the same time, we want to de-duplicate efforts.  With this,
CoreOS cherry picks a few manifests from the Sagano "tier-0" and
"tier-1".

There's *definitely* more we can share between the two, but
this is a notable starting point.

--- a/manifests/bootable-rpm-ostree.yaml
+++ b/manifests/bootable-rpm-ostree.yaml
@@ -1,37 +1,1 @@
-# This minimal base is the userspace: systemd + rpm-ostree + bootloader.
-# The intent of this is to inherit from this if you are doing something highly
-# custom that e.g. might not involve Ignition or podman, but you do want
-# rpm-ostree.
-# We expect most people though using coreos-assembler to inherit from
-# fedora-coreos-base.yaml.
-packages:
- - systemd
- # linux-firmware now a recommends so let's explicitly include it
- # https://gitlab.com/cki-project/kernel-ark/-/commit/32271d0cd9bd52d386eb35497c4876a8f041f70b
- # https://src.fedoraproject.org/rpms/kernel/c/f55c3e9ed8605ff28cb9a922efbab1055947e213?branch=rawhide
- - linux-firmware
- # rpm-ostree
- - rpm-ostree nss-altfiles
- # firmware updates
- - fwupd
-
-# bootloader
-packages-aarch64:
-  - grub2-efi-aa64 efibootmgr shim
-packages-ppc64le:
-  - grub2 ostree-grub2
-packages-s390x:
-  # On Fedora, this is provided by s390utils-core. on RHEL, this is for now
-  # provided by s390utils-base, but soon will be -core too.
-  - /usr/sbin/zipl
-  # for Secure Execution
-  - veritysetup
-packages-x86_64:
-  - grub2 grub2-efi-x64 efibootmgr shim
-  - microcode_ctl
-
-exclude-packages:
-  # Exclude kernel-debug-core to make sure that it doesn't somehow get
-  # chosen as the package to satisfy the `kernel-core` dependency from
-  # the kernel package.
-  - kernel-debug-core
+../sagano/tier-1/bootable-rpm-ostree.yaml
