Revert "tree: promote changes from testing at 0d7d22fb781f5a42ba98f4947b54efe1c39beef7"
This reverts commit 617e32cbb53510e4028e39b07ec4afbe4f2b5cad.

--- a/.github/workflows/add-override.yml
+++ b/.github/workflows/add-override.yml
@@ -37,7 +37,7 @@ jobs:
   add-override:
     name: Add package override
     runs-on: ubuntu-latest
-    container: quay.io/fedora/fedora:latest
+    container: registry.fedoraproject.org/fedora:latest
     steps:
       - name: Install dependencies
         run: dnf install -y git jq python3-bodhi-client python3-pyyaml
