--- a/kola-denylist.yaml
+++ b/kola-denylist.yaml
@@ -7,7 +7,7 @@
   tracker: https://github.com/coreos/coreos-assembler/pull/1478
 - pattern: ext.config.kdump.crash
   tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1430
-  # snooze: 2023-10-24 (disabled on promotion)
+  # snooze: 2023-09-28 (disabled on promotion)
   # warn: true (disabled on promotion)
   arches:
     - aarch64
@@ -15,23 +15,89 @@
     - stable
     - testing
     - testing-devel
+- pattern: ext.config.networking.nameserver
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1542
+  # snooze: 2023-09-28 (disabled on promotion)
+  # warn: true (disabled on promotion)
+  streams:
+    - rawhide
+    - branched
+    - next-devel
+    - next
+- pattern: ext.config.networking.no-persist-ip
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1542
+  # snooze: 2023-09-28 (disabled on promotion)
+  # warn: true (disabled on promotion)
+  streams:
+    - rawhide
+    - branched
+    - next-devel
+    - next
+- pattern: ext.config.networking.prefer-ignition-networking
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1542
+  # snooze: 2023-09-28 (disabled on promotion)
+  # warn: true (disabled on promotion)
+  streams:
+    - rawhide
+    - branched
+    - next-devel
+    - next
+- pattern: ext.config.networking.ifname-karg.everyboot-systemd-link-file
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1542
+  # snooze: 2023-09-28 (disabled on promotion)
+  # warn: true (disabled on promotion)
+  streams:
+    - rawhide
+    - branched
+    - next-devel
+    - next
+- pattern: ext.config.networking.force-persist-ip
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1542
+  # snooze: 2023-09-28 (disabled on promotion)
+  # warn: true (disabled on promotion)
+  streams:
+    - rawhide
+    - branched
+    - next-devel
+    - next
+- pattern: ext.config.networking.bridge-static-via-kargs
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1542
+  # snooze: 2023-09-28 (disabled on promotion)
+  # warn: true (disabled on promotion)
+  streams:
+    - rawhide
+    - branched
+    - next-devel
+    - next
+- pattern: ext.config.networking.ifname-karg.udev-rule-firstboot-propagation
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1542
+  # snooze: 2023-09-28 (disabled on promotion)
+  # warn: true (disabled on promotion)
+  streams:
+    - rawhide
+    - branched
+    - next-devel
+    - next
+- pattern: ext.config.networking.mtu-on-bond-kargs
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1542
+  # snooze: 2023-09-28 (disabled on promotion)
+  # warn: true (disabled on promotion)
+  streams:
+    - rawhide
+    - branched
+    - next-devel
+    - next
 - pattern: coreos.ignition.ssh.key
   tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1553
-  # snooze: 2023-10-13 (disabled on promotion)
+  # snooze: 2023-09-27 (disabled on promotion)
   # warn: true (disabled on promotion)
   platforms:
     - azure
-- pattern: ext.config.docker.basic
-  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1578
-  # snooze: 2023-10-13 (disabled on promotion)
-  # warn: true (disabled on promotion)
-  streams:
-    - rawhide
 - pattern: ext.config.kdump.crash
-  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1588
-  # snooze: 2023-10-24 (disabled on promotion)
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1560
+  # snooze: 2023-09-30 (disabled on promotion)
   # warn: true (disabled on promotion)
-  arches:
-    - ppc64le
   streams:
     - rawhide
+    - next-devel
+    - next
