overrides: fix arch->noarch for grub2-ppc64le-modules
Fixes e9ef8e3

--- a/manifest-lock.overrides.ppc64le.yaml
+++ b/manifest-lock.overrides.ppc64le.yaml
@@ -22,7 +22,7 @@ packages:
       reason: https://github.com/coreos/fedora-coreos-tracker/issues/1490#issuecomment-1720020468
       type: fast-track
   grub2-ppc64le-modules:
-    evra: 1:2.06-104.fc39.ppc64le
+    evra: 1:2.06-104.fc39.noarch
     metadata:
       bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2023-f46483e5b5
       reason: https://github.com/coreos/fedora-coreos-tracker/issues/1490#issuecomment-1720020468
