manifests: include wasm packages in fedora-coreos-base manifest
It's a bit confusing to folks that this didn't make it into the
testing and stable streams [1]. Let's just include them on all
streams like we agreed to originally.

[1] https://github.com/coreos/fedora-coreos-tracker/issues/1375#issuecomment-1750114083

--- a/manifest-lock.x86_64.json
+++ b/manifest-lock.x86_64.json
@@ -195,6 +195,9 @@
     "crun-wasm": {
       "evra": "1.11.1-1.fc39.x86_64"
     },
+    "crun-wasm": {
+      "evra": "1.10-1.fc38.x86_64"
+    },
     "crypto-policies": {
       "evra": "20230731-1.git5ed06e0.fc39.noarch"
     },
@@ -335,6 +338,9 @@
     },
     "fmt": {
       "evra": "10.0.0-3.fc39.x86_64"
+    },
+    "fmt": {
+      "evra": "9.1.0-2.fc38.x86_64"
     },
     "fstrm": {
       "evra": "0.6.1-8.fc39.x86_64"
@@ -1161,6 +1167,9 @@
     "spdlog": {
       "evra": "1.12.0-2.fc39.x86_64"
     },
+    "spdlog": {
+      "evra": "1.11.0-5.fc38.x86_64"
+    },
     "sqlite-libs": {
       "evra": "3.42.0-7.fc39.x86_64"
     },
@@ -1256,6 +1265,9 @@
     },
     "wasmedge-rt": {
       "evra": "0.13.4-1.fc39.x86_64"
+    },
+    "wasmedge-rt": {
+      "evra": "0.13.4-2.fc38.x86_64"
     },
     "which": {
       "evra": "2.21-40.fc39.x86_64"
