--- a/manifest-lock.aarch64.json
+++ b/manifest-lock.aarch64.json
@@ -195,6 +195,9 @@
     "crun-wasm": {
       "evra": "1.11.1-1.fc39.aarch64"
     },
+    "crun-wasm": {
+      "evra": "1.10-1.fc38.aarch64"
+    },
     "crypto-policies": {
       "evra": "20230731-1.git5ed06e0.fc39.noarch"
     },
@@ -335,6 +338,9 @@
     },
     "fmt": {
       "evra": "10.0.0-3.fc39.aarch64"
+    },
+    "fmt": {
+      "evra": "9.1.0-2.fc38.aarch64"
     },
     "fstrm": {
       "evra": "0.6.1-8.fc39.aarch64"
@@ -1158,6 +1164,9 @@
     "spdlog": {
       "evra": "1.12.0-2.fc39.aarch64"
     },
+    "spdlog": {
+      "evra": "1.11.0-5.fc38.aarch64"
+    },
     "sqlite-libs": {
       "evra": "3.42.0-7.fc39.aarch64"
     },
@@ -1253,6 +1262,9 @@
     },
     "wasmedge-rt": {
       "evra": "0.13.4-1.fc39.aarch64"
+    },
+    "wasmedge-rt": {
+      "evra": "0.13.4-2.fc38.aarch64"
     },
     "which": {
       "evra": "2.21-40.fc39.aarch64"
