05core: run `coreos-gpt-setup` and `ignition-ostree-uuid-boot` later
These services need to manipulate the boot disk but if the disk is
backed by iSCSI, we need networking first. Move them to run later in the
boot process but still before `ignition-disks`.

Part of: https://github.com/coreos/fedora-coreos-tracker/issues/1590

--- a/overlay.d/05core/usr/lib/dracut/modules.d/35coreos-ignition/coreos-ignition-setup-user.service
+++ b/overlay.d/05core/usr/lib/dracut/modules.d/35coreos-ignition/coreos-ignition-setup-user.service
@@ -12,7 +12,7 @@ OnFailure=emergency.target
 OnFailureJobMode=isolate
 
 # On diskful boots, coreos-diskful-generator adds Requires/After on
-# dev-disk-by\x2dlabel-boot.device and coreos-gpt-setup.service
+# dev-disk-by\x2dlabel-boot.device
 
 [Service]
 Type=oneshot
