05core: neuter `coreos-copy-firstboot-network.service` for iSCSI boot
In an iSCSI boot, we have no utility for
`coreos-copy-firstboot-network.service` since it copies network settings
from the bootfs, which will only show up after networking has already
come up. Users are required to configure non-default networking via
kargs for iSCSI boots.

Part of: https://github.com/coreos/fedora-coreos-tracker/issues/1590

--- a/overlay.d/05core/usr/lib/dracut/modules.d/35coreos-ignition/coreos-gpt-setup.service
+++ b/overlay.d/05core/usr/lib/dracut/modules.d/35coreos-ignition/coreos-gpt-setup.service
@@ -5,6 +5,8 @@ Before=systemd-fsck-root.service
 Before=ignition-diskful.target
 
 # Have some ordering with this service since it also wants to access the bootfs.
+# We run after it since that service runs early and is skipped if we're on
+# iSCSI, but we still run.
 After=coreos-copy-firstboot-network.service
 
 Requires=dev-disk-by\x2dlabel-boot.device
