manifests: add new passwd manifest, include only on F39
The passwd RPM is no longer available in F40+ [1]. The passwd
binary is provided by shadow-utils, which we already name. Let's
configure it so that passwd gets named in the package lists only
on F39.

[1] https://src.fedoraproject.org/rpms/shadow-utils/c/91360f25a8c8b810d59bec2803a2477a2647c775?branch=rawhide

--- a/manifests/fedora-coreos.yaml
+++ b/manifests/fedora-coreos.yaml
@@ -26,6 +26,10 @@ conditional-include:
   - if:
       - releasever >= 40
     include: ostree-bls.yaml
+  - if: releasever == 39
+    # passwd RPM was obsoleted by shadow-utils in F40+, but we need to keep
+    # including it in F39. Remove this when we are on F40+ on all streams.
+    include: passwd.yaml
 
 ostree-layers:
   - overlay/15fcos
