Enable composefs for 41+
We really want to aim to eventually enable this by default, let's
test things out in rawhide.

A thing that this is known to break is the "chattr -i" hack
for new toplevel dirs (xref https://github.com/coreos/rpm-ostree/issues/337 )

Basically if you want that, you either need to make a derived image,
or enable transient root.

--- a/manifests/fedora-coreos.yaml
+++ b/manifests/fedora-coreos.yaml
@@ -33,6 +33,8 @@ conditional-include:
     # Remove this once we have Podman v5 in f39.
     # xref: https://github.com/coreos/fedora-coreos-tracker/issues/1629
     include: cni-plugins.yaml
+  - if: stream == "rawhide"
+    include: composefs.yaml
 
 ostree-layers:
   - overlay/15fcos
